--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/cloudflare": "^12.6.12",
     "astro": "^5.16.7"
+  },
+  "devDependencies": {
+    "wrangler": "^4.58.0"
   }
 }
